# schema-overseer-local

./: .gitignore  .pre-commit-config.yaml  LICENSE  PRINCIPLES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  test.yml
example-project.0/: app.py  schema.py
example-project.1/: models.py  schema.py
example-project.2/: app.py  builders.py  models.py  schema.py
schema_overseer_local/: __init__.py  exceptions.py  registry.py  utils.py
tests/: test_all.py  test_bad_builders.py  test_check_for_single_valid_schema.py  test_mypy.py  test_output_types.py  test_positive.py  test_positive_future_annotations.py  test_validate_output.py
tutorial/1/: run.sh
tutorial/1/example_project/: app.py  models.py
tutorial/2/: requirements.txt
tutorial/2/example_project/: app.py  models.py
tutorial/3/example_project/: app.py  payloads.py
tutorial/4/: requirements.txt
tutorial/4/example_project/: app.py
tutorial/4/example_project/payload/: builders.py  registry.py
tutorial/4/example_project/payload/models/: new.py  old.py
tutorial/bento/: README.md
tutorial/bento/1-local/: README.md  download_model.py  requirements.txt  service.py  update_model.py  yolo_runner.py
tutorial/quickstart/: adapter.py  app.py
tutorial/simple/1/: requirements.txt  run.sh
tutorial/simple/1/example_project_1/: app.py
tutorial/simple/2/: requirements.txt  run.sh
tutorial/simple/2/example_project_2/: app.py
tutorial/simple/3/: requirements.txt  run.sh
tutorial/simple/3/example_project_3/: app.py  payloads.py
tutorial/simple/4/: run.sh
tutorial/simple/4/example_project_4/: app.py
tutorial/simple/4/example_project_4/payload/: registry.py
tutorial/simple/4/example_project_4/payload/models/: new.py  old.py
