[tool.poetry]
name = "schema-overseer-local"
version = "0.1.0"
description = "Helper to create a compatibility layer between inputs in different formats and other parts of application."
license = "MIT"
authors = ["Nik Sergievskii <nnonexistent@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Schema-Overseer/schema-overseer-local"
repository = "https://github.com/Schema-Overseer/schema-overseer-local"
packages = [{ include = "schema_overseer_local" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
pydantic = "^2.5.3"
python = "^3.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 119


[tool.ruff.lint]
extend-select = [
    "A",
    "ASYNC",
    "B",
    "BLE",
    "C",
    "E1",
    "EM",
    "EXE",
    "FBT",
    "G",
    "INP",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PT",
    "PTH",
    "RUF",
    "S",
    "SIM",
    "UP",
    "W",
]
ignore = ["E731", "B011", "S101", "PT015"]


[tool.ruff.format]
quote-style = "single"


[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
check_untyped_defs = true
strict = true
